--- a/4.3 HTML Porfolio Project/public/movie-ranking.html
+++ b/4.3 HTML Porfolio Project/public/movie-ranking.html
@@ -1,9 +1,11 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Kayla</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h2>The Terminator</h2>
+<p>
+	Classic sci-fi movie with an interesting perspective regarding technology.
+</p>
+<h2>Resident Evil</h2>
+<p>Love the girl power in the main character.</p>
+<h2>Home Alone</h2>
+<p>Best Christmas movie ever!</p>
