--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -28,6 +28,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 		</h2>
 		<img
 			src="./assets/images/movie-ranking.png"
+			height="200"
 			alt="Screenshot of my movie ranking project"
 		/>
 		<h2>
@@ -35,6 +36,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 		</h2>
 		<img
 			src="./assets/images/birthday-invite.png"
+			height="200"
 			alt="Screenshot of my Birthday Invite Project"
 		/>
 		<hr />
